--- a/src/style.css
+++ b/src/style.css
@@ -161,6 +161,14 @@ ul {
   transition: ease-in-out 200ms;
 }
 
+.form-control {
+  background-color: rgb(223, 249, 249);
+}
+
+#newCity {
+  background-color: rgb(201, 221, 221);
+}
+
 button:hover {
   opacity: 0.8;
   border: 1px solid #a3b4b5;
