--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,20 @@ body {
   font-family: "Oxygen", sans-serif;
 }
 
+.footer {
+  color: #bab8b8;
+margin-top: -60px;
+margin-left: 90px;
+font-size: 10px;
+}
+
+@media (max-width: 576px) {
+  .small-icon {
+    max-width: 50%;
+    height: auto;
+  }
+}
+
 .left-box {
   overflow: hidden;
   margin: 60px;
@@ -19,6 +33,8 @@ body {
   border-radius: 40px;
   background-size: cover;
   background-repeat: no-repeat;
+  max-width: 100%;
+  height: auto;
 }
 h1 {
   font-family: "Righteous", cursive;
