--- a/src/style.css
+++ b/src/style.css
@@ -80,6 +80,10 @@ h1 {
   color: rgb(200, 217, 241);
 }
 
+#condition {
+  text-transform: capitalize;
+}
+
 .right-box {
   border: solid #222831;
   border-top: 1px solid #a3b4b5;
