--- a/src/style.css
+++ b/src/style.css
@@ -117,9 +117,10 @@ ul {
   background: #1e1e1e;
   margin-left: -13px;
   width: 108px;
+  transition: all 0.5s ease-in-out;
 }
 .card:hover {
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 10px 10px rgba(0, 0, 0, 0.5);
   transform: translateY(-10px);
   transition: all 0.4s ease-in-out;
 }
