Introduced Unsplash API that changes the images according to the form input & adding credits in the footer
Randomising the result array in JS so random photos are displayed

--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,13 @@ body {
   text-decoration: none;
 }
 
+.footer #unsplash-credits {
+  margin-left: 100px;
+}
+.unsplash-link {
+  text-decoration: none;
+}
+
 .left-box {
   overflow: hidden;
   margin: 60px;
