--- a/src/style.css
+++ b/src/style.css
@@ -218,19 +218,62 @@ button:hover {
 
 /* style for smaller windows */
 
-@media (max-width: 768px) {
+@media (max-width: 560px) {
   .left-box {
     margin: 20px;
   }
   .city {
     font-size: 16pt;
-    margin-left: 25px;
   }
   .temperature {
     font-size: 20pt;
   }
-  .form-group {
-    width: 90%;
-    margin-left: 20px;
+  .current-location,
+  .form-control,
+  .input-search,
+  .input-group-text {
+    font-size: 9pt;
+    display: block;
+    margin: 10px auto;
   }
+  .input-search {
+    margin-right: 50px;
+  }
+
+  .loc-bttn {
+    width: 10px;
+  }
+
+  #week-day {
+    font-size: 20pt;
+    margin: 0px;
+    padding: 0px;
+  }
+
+  ul {
+    font-size: 15px;
+    margin-left: -10px;
+  }
+
+  .card {
+    max-width: 60px;
+
+    font-size: 10px;
+  }
+  .card .small-icon {
+    width: 30px;
+  }
+  .right-box {
+    margin: 0;
+    border: 1px solid #a3b4b5;
+    border-radius: 40px;
+    margin-bottom: 10px;
+  }
+  .footer {
+    font-size: 7pt;
+    margin: 5px;
+  }
+  .footer #unsplash-credits {
+  margin-left: 70px;
+}
 }
